[package]
name = "wisphaven"
version = "0.1.1"  #will have game saves be compatible if major/minor versions are equal
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = ["crates/*"]


# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

#TODO: uncomment for actual release builds
#also look into this: https://nnethercote.github.io/perf-book/build-configuration.html#link-time-optimization
[profile.release]
lto = true

[workspace.dependencies]
#external deps
ahash = "0.8.3"
#TODO: remove dynamic_linking/trace_tracy for releases (automate this)
#TODO: maybe enable wayland feature?
bevy = { version = "0.12.1", features = ["dynamic_linking", "serialize"] }
bracket-noise = "0.8.7"
dashmap = "5.4.0"
futures-lite = "1.13.0"
serde = { version = "1.0.162", features = ["derive"] }
leafwing-input-manager = "0.11.0"
bevy-inspector-egui = "0.21.0"
big-brain = "0.19.0"
bincode = "1.3.3"
rusqlite = { version = "0.29.0", features = ["bundled"] }
r2d2_sqlite = "0.22.0"
r2d2 = "0.8.10"
rand = "0.8.5"
rand_distr = "0.4.3"
itertools = "0.11.0"
futures-timer = "3.0.2"
bevy_quinnet = "0.6.0"
serde_with = "3.2.0"
bevy_hanabi = "0.8"
bitflags = "2.4.1"

[patch.crates-io]
#include to fix crash on linux without updating to bevy 0.13.2
bevy_render = { git = "https://github.com/jim-works/bevy_render.git" }

[dependencies]
ahash = { workspace = true }
bevy = { workspace = true }
bracket-noise = { workspace = true }
dashmap = { workspace = true }
futures-lite = { workspace = true }
serde = { workspace = true }
leafwing-input-manager = { workspace = true }
bevy-inspector-egui = { workspace = true }
big-brain = { workspace = true }
bincode = { workspace = true }
rusqlite = { workspace = true }
r2d2_sqlite = { workspace = true }
r2d2 = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
itertools = { workspace = true }
futures-timer = { workspace = true }
bevy_quinnet = { workspace = true }
serde_with = { workspace = true }
bevy_hanabi = { workspace = true }
bitflags = { workspace = true }

#internal crates
util = { path = "crates/util" }
engine = { path = "crates/engine" }
