[package]
name = "wisphaven"
version = "0.2.0"  #will have game saves be compatible if major/minor versions are equal
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = ["crates/*"]


# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1
# increases incremental compilation speed by about 10% while keeping debug info
split-debuginfo="unpacked"

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

#also look into this: https://nnethercote.github.io/perf-book/build-configuration.html#link-time-optimization
[profile.release]
lto = true

[workspace.dependencies]
#external deps
ahash = "0.8.3"
#TODO: remove dynamic_linking/trace_tracy for releases (automate this)
#TODO: maybe enable wayland feature?
bevy = { version = "0.15.1", features = ["dynamic_linking", "serialize"] }
bracket-noise = "0.8.7"
dashmap = "6.1.0"
futures-lite = "2.5.0"
serde = { version = "1.0.215", features = ["derive"] }
leafwing-input-manager = "0.16.0"
bevy-inspector-egui = "0.28.0"
big-brain = "0.22.0"
bincode = "1.3.3"
rusqlite = { version = "0.32.1", features = ["bundled"] }
r2d2_sqlite = "0.25.0"
r2d2 = "0.8.10"
rand = "0.8.5"
rand_distr = "0.4.3"
itertools = "0.13.0"
futures-timer = "3.0.3"
lightyear = { version = "0.18.0", features = ["leafwing"]}
serde_with = "3.11.0"
bevy_hanabi = "0.14.0"
bitflags = "2.6.0"
# already included in naga_oil
regex = "1.11.1"
bevy_simple_text_input = "0.10.1"

[dependencies]
ahash = { workspace = true }
bevy = { workspace = true }
bracket-noise = { workspace = true }
dashmap = { workspace = true }
futures-lite = { workspace = true }
serde = { workspace = true }
leafwing-input-manager = { workspace = true }
bevy-inspector-egui = { workspace = true }
big-brain = { workspace = true }
bincode = { workspace = true }
rusqlite = { workspace = true }
r2d2_sqlite = { workspace = true }
r2d2 = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
itertools = { workspace = true }
futures-timer = { workspace = true }
lightyear = { workspace = true }
serde_with = { workspace = true }
bevy_hanabi = { workspace = true }
bitflags = { workspace = true }
regex = { workspace = true }

#internal crates
util = { path = "crates/util" }
engine = { path = "crates/engine" }
ui = { path = "crates/ui" }
actors = { path = "crates/actors" }
waves = { path = "crates/waves" }
items = { path = "crates/items" }

[workspace.metadata.dylint]
libraries = [
    { git = "https://github.com/jim-works/bevy_lints", branch="master" },
    # or, if you have the library cloned locally
    # { path = "../bevy_devtools" },
]

# disable unknown lints warning
# lets us use #[allow(state_scoped_entities)] over this monstrosity
#![cfg_attr(dylint_lib = "bevy_lints", allow(state_scoped_entities))]
[workspace.lints.rust]
unknown_lints = "allow"

[workspace.lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
let_and_return = "allow"
manual_range_contains = "allow"
needless_doctest_main = "allow"
