[package]
name = "actors"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { workspace = true }
ahash = { workspace = true }
big-brain = { workspace = true }

engine = { path = "../engine" }
util = { path = "../util" }
interfaces = { path = "../interfaces" }
physics = { path = "../physics" }
world = { path = "../world" }

[lints]
workspace = true
