[package]
name = "citizens"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { workspace = true }
ahash = { workspace = true }
big-brain = { workspace = true }

engine = { path = "../engine" }
util = { path = "../util" }
interfaces = { path = "../interfaces" }
physics = { path = "../physics" }
world = { path = "../world" }
actors = { path = "../actors" }

[lints]
workspace = true
