[package]
name = "items"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { workspace = true }
bevy_hanabi = { workspace = true }
serde = { workspace = true }
rand = { workspace = true }

engine = { path = "../engine" }
util = { path = "../util" }
actors = { path = "../actors" }
world = { path = "../world" }
interfaces = { path = "../interfaces" }
physics = { path = "../physics" }
materials = { path = "../materials" }
waves = { path = "../waves" }

[lints]
workspace = true
