[package]
name = "ui"
version = "0.1.0"
edition = "2021"

[dependencies]
ahash = { workspace = true }
bevy = { workspace = true }
leafwing-input-manager = { workspace = true }
regex = { workspace = true }
bevy_simple_text_input = { workspace = true }

engine = { path = "../engine" }
util = { path = "../util" }
waves = { path = "../waves" }
crafting = { path = "../crafting" }
interfaces = { path = "../interfaces" }
world = { path = "../world" }
debug = { path = "../debug" }
materials = { path = "../materials" }
serialization = { path = "../serialization" }

[lints]
workspace = true
