[package]
name = "waves"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { workspace = true }
itertools = { workspace = true }
rand = { workspace = true }

engine = { path = "../engine" }
world = { path = "../world" }
util = { path = "../util" }
actors = { path = "../actors" }
interfaces = { path = "../interfaces" }
